--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,10 @@ authors = ["Xendergo"]
 
 [dependencies]
 clap = "2.33.*"
-quartz_nbt = "0.2.*"
+quartz_nbt = { version = "0.2.*", features = ["serde"] }
 flate2 = "1.0.*"
 tar = "0.4.*"
 anyhow = "1.0.*"
 chrono = "0.4.*"
 rand = "0.8.*"
+serde = { version = "1.0.*", features = ["derive"] }
