--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,8 @@ authors = ["Xendergo"]
 [dependencies]
 clap = "2.33.*"
 quartz_nbt = { version = "0.2.*", features = ["serde"] }
-flate2 = "1.0.*"
 anyhow = "1.0.*"
 chrono = "0.4.*"
 rand = "0.8.*"
 serde = { version = "1.0.*", features = ["derive"] }
+zip = "0.5.*"
