--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,4 @@ chrono = "0.4.*"
 rand = "0.8.*"
 serde = { version = "1.0.*", features = ["derive"] }
 zip = "0.5.*"
-once_cell = "1.8.*"
+ring = "0.16.*"
